#VESRION 0.8.1#

 - Peak_Application_Modules instance is now stored in Peak_Application::$module

 - added method getName() to Peak_Application_Modules

 - added classes Peak_Config_Ini and Peak_Config_Json

 - visibility of $_vars from Peak_Config has been changed to protected to have the ability of extending the class

#VERSION 0.8.0#

 - added constant ERR_CUSTOM to Peak_Exception

 - autoload.php > remove deprecated function _autoloadAppMod()

 - Peak_Zreflection > added methods getMethodsByInheritance() and getPropertiesByInheritance()

 - fixed Peak_View_Theme to throw new exception ERR_VIEW_THEME_NOT_FOUND when loading a theme folder that doesn't exists.

 - fixed rendering engines to throw exception with only filename instead of absolute path.

 - Peak_Exception > renamed ERR_VIEW_TPL_NOT_FOUND to ERR_VIEW_SCRIPT_NOT_FOUND and updated rendering engines.
                    
 - Peak_Exception > deprecated method getDebugtrace()

 - Peak_Exception > removed property $_trace. never used and we can achieved the same effect with parent class methods

 - Peak_Core > added set_exception_handler('pkexception') to handle all uncaught exceptions (try/catch block missing)

 - fixed method output() visibility in Peak_View_Render_Json

 - fixed minor bug with views cache in Peak_View_Render::preOutput() and Peak_View_Cache::isCached()

 - Peak_Exception > added constant ERR_CTRL_ACTION_NOT_FOUND. Fixed Peak_Controller_Action:handleAction().
                    This fix url problem with valid controller and unknow action.
                    
 - Peak_Controller_Front > Added method forceDispatch() and remove param $flush_request of method dispatch()

 - Peak_Router > added property $_regex, methods public addRegex() and protected matchRegex(). 
                 Tweaked getRequestUri() to support matchRegex().
                 We can now also specify custom url with regular expression.
